add download methods