@@ -10,8 +10,10 @@ import java.io.IOException;
 import java.io.RandomAccessFile;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.OpenOption;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.text.DecimalFormat;
 import java.util.List;
 import java.util.Objects;
@@ -25,6 +27,7 @@ import java.util.concurrent.ThreadPoolExecutor.AbortPolicy;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 
+import kotlin.text.Charsets;
 import okhttp3.OkHttpClient;
 
 /**
@@ -335,7 +338,8 @@ public class ConcurrentDownLoad {
         StringBuilder builder = new StringBuilder(1024);
         builder.append(startTime).append("\r\n");
         this.paces.forEach(v -> builder.append(v.startIndex).append("-").append(v.endIndex).append("\r\n"));
-        Files.writeString(keepOnPath, builder.toString());
+        Files.write(keepOnPath, builder.toString().getBytes(), StandardOpenOption.WRITE);
+//        Files.writeString(keepOnPath, builder.toString());
     }
 
     /**
